[tool.poetry]
name = "nlp-tools-py-lib"
version = "0.1.0"
description = "simple nlp library"
authors = ["thomas.marquis.dev <thomas.marquis.dev@gmail.com>"]
lisense = "MIT"
packages = [
    {include = "nlp_tools"}
]
readme = "README.md"
repository = "https://github.com/thomas-marquis/nlp-tools-py-lib"
homepage = "https://github.com/thomas-marquis/nlp-tools-py-lib"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
