[tool.poetry]
name = "nlp-tools-py-lib"
version = "0.1.1"
description = "simple nlp library"
authors = ["thomas.marquis.dev <thomas.marquis.dev@gmail.com>"]
license = "MIT"
packages = [
    {include = "nlp_tools"}
]
readme = "README.md"
repository = "https://github.com/thomas-marquis/nlp-tools-py-lib"
homepage = "https://github.com/thomas-marquis/nlp-tools-py-lib"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.1"
nltk = "^3.4.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
